syntax = "proto3";

package coop.drivers.dispatch.v1beta1;

import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";
import "validate/validate.proto";

option go_package = "github.com/kevinmichaelchen/api-dispatch/internal/idl/coop/drivers/dispatch/v1beta1";

message DriverLocation {
  string id = 1;
  string driver_id = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.Timestamp most_recent_heartbeat = 3 [(validate.rules).timestamp.required = true];
  google.type.LatLng current_location = 4 [(validate.rules).message.required = true];
}
